--- a/src/css/AddNewColor.css
+++ b/src/css/AddNewColor.css
@@ -226,66 +226,25 @@
     z-index: 100;
     font-family: sans-serif;
     cursor: pointer;
+    transition: background-color 0.5s ease, color 0.5s ease;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-
-.Add-New-Color-Departament .Cancel-And-Delete .cancel::before,
-.Add-New-Color-Departament .Cancel-And-Delete .submit::before {
-    content: "";
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 0;
-    overflow: hidden;
-    height: 100%;
-    left: 0;
-    top: 0;
-    font-size: 15px;
-    font-weight: 500;
-    text-transform: capitalize;
-    letter-spacing: 0.5px;
-    color: #ffffff;
-    z-index: 100;
-    font-family: sans-serif;
-    cursor: pointer;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    transition: width 0.7s ease;
-    -webkit-transition: width 0.7s ease;
-    -moz-transition: width 0.7s ease;
-    -ms-transition: width 0.7s ease;
-    -o-transition: width 0.7s ease;
-}
-
-.Add-New-Color-Departament .Cancel-And-Delete .cancel::before {
-    content: "Cancel";
+.Add-New-Color-Departament .Cancel-And-Delete .cancel:hover{
     background-color: var(--submit-background);
+    color: white;
 }
-
-.Add-New-Color-Departament .Cancel-And-Delete .submit::before {
-    content: "Submit";
-    background-color: #ffffff;
-    color: var(--submit-background);
-}
-
-.Add-New-Color-Departament .Cancel-And-Delete .cancel:hover::before,
-.Add-New-Color-Departament .Cancel-And-Delete .submit:hover::before {
-    width: 100%;
-}
-
 .Add-New-Color-Departament .Cancel-And-Delete .submit {
     background-color: var(--submit-background);
     color: #ffffff;
 }
-
+.Add-New-Color-Departament .Cancel-And-Delete .submit:hover{
+    background-color: white;
+    color: var(--submit-background);
+}
 @media (max-width: 992px) {
 
     .Add-New-Color-Departament .Cancel-And-Delete .cancel,
